[gd_scene load_steps=6 format=3 uid="uid://bng5gkkfxrli5"]

[ext_resource type="Script" path="res://Entities/Environment/Pickables/base_pickable.gd" id="1_cuqtq"]
[ext_resource type="Texture2D" uid="uid://bj1p1ghcc78pd" path="res://art/pickups/health-pickup.png" id="1_rgn7s"]
[ext_resource type="AudioStream" uid="uid://d230alowvc0me" path="res://audio/sfx/placeholder/pickupCoin.wav" id="3_e2ns7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tie5v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3jn4x"]
radius = 33.0

[node name="BasePickable" type="Area2D"]
collision_layer = 32
script = ExtResource("1_cuqtq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tie5v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rgn7s")

[node name="MagnetArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea"]
shape = SubResource("CircleShape2D_3jn4x")

[node name="PickupNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e2ns7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="MagnetArea" to="." method="_on_magnet_area_body_entered"]
